# bioreader

./: .gitignore  Cargo.toml  README.md
data/fastq/: small_test_1.fq
docs/: todo.md
src/: byte_reader.rs  fasta_byte_reader.rs  fasta_reader.rs  fastq_byte_reader.rs  fastq_reader.rs  lib.rs  main.rs  utils.rs
src/parallel/: fastq.rs
src/sequence/: fasta_record.rs  fastq_record.rs  mod.rs  utils.rs
